ncp-features-example/2.2.0-tls-ingress/nginx-web-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tls-ingress
  namespace: ncp-feature
  labels:
    feature: tls-ingress 
spec:
  replicas: 3
  selector:
    matchLabels:
      feature: tls-ingress       
  template:
    metadata:
      labels:
        feature: tls-ingress 
    spec:
      containers:
      - name: nginx-tls-ingress 
        image: nginx
        ports:
        - containerPort: 80
