ncp-features-example/2.2.0-tls-ingress/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls-ingress
  namespace: test
  labels:
    feature: tls-ingress 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: tls-ingress
