ncp-features-example/2.2.0-tls-ingress/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-tls-ingress
  namespace: ncp-feature
  labels:
    feature: tls-ingress   
spec:
  tls:
  - hosts:
    - tls-ingress.demo.corp.local
    secretName: tls-ingress
  rules:
  - host: tls-ingress.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-tls-ingress
          servicePort: 80
